# julie

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/adapters/api/: magic_link_routes.py
src/adapters/persistence/: in_memory_magic_link_repository.py
src/core/: exceptions.py
src/core/entities/: magic_link.py  message.py
src/core/ports/: agent_gateway.py  magic_link_repository.py  repository.py
src/use_cases/: consume_magic_link.py  generate_magic_link.py
tests/: test_magic_link.py
