[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_agent_project"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "AI Agent project with Clean Architecture"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/example/ai_agent_project"
